assets/css/custom.scss
// section.section:nth-of-type(odd):not(:first-of-type) {
//     background-color: #fff;
// }

h1,
h2,
h3,
h4,
h5,
h6 {
  &.line:before {
    position: absolute;
    left: -12%;
    top: 18px;
    content: "";
    display: inline-block;
    width: 12%;
    height: 3px;
    background-color: #ffa535;
    background-image: linear-gradient(100deg, #f9643d, #fe2a77);
    background-image: linear-gradient(100deg, #f9643d, #fe2a77);
  }
}

section {
  &.bg-white {
    .team-member {
      background-color: #f7f7f7 !important;
      color: #000 !important;

      .member-content {
        * {
          color: #000 !important;
        }
      }
    }
  }

  &.bg-white {
    .service-2 {
      .service-item {
        background-color: #f7f7f7;
      }
    }
  }

  &.hero-area {
    .video-player {
      position: relative;
      display: inline-block;

      .play-icon {
        i {
          margin-left: 3px;
          height: 80px;
          width: 80px;
          border-radius: 50px;
          transition: -webkit-transform 300ms ease;
          transition: transform 300ms ease;
          transition: transform 300ms ease, -webkit-transform 300ms ease;
          background: #e85e6e;
          color: #fff;
          line-height: 80px;
          font-size: 30px;
          margin-left: 5px;
          box-shadow: 3px 2px 10px 0 rgba(0, 0, 0, 0.4);
        }
      }
    }
  }

  .team-member {
    border: 1px solid #eee;
  }

  &#about {
    &.about-2 {
      h2 {
        // word-wrap: break-word;
        // hyphens: auto;
      }
    }
  }

  &#clinics,
  &#partners {
    a {
      h4 {
        color: #000;

        &:hover,
        &:active,
        &:focus {
          color: unset;
        }
      }
    }
  }
}

#mdcontent {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-bottom: 1vh !important;

    &:not(:first-child) {
      margin-top: 3.5rem !important;
    }
  }
}

img + .img-copyright {
  background-color: rgba(255, 255, 255, 0.8);
  bottom: 0;
  color: #000;
  font-size: 0.65rem;
  font-weight: 300;
  margin: 0;
  position: absolute;
  padding: 3px;
  right: 0;

  .tf-ion-social-youtube {
    color: #ff0000;
    font-size: 3em;
  }
}

.btn-main {
  &:hover,
  &:focus,
  &:active {
    background-image: linear-gradient(100deg, #fe2a77, #f9643d) !important;
    color: #fff;
  }
  &:active {
    font-weight: 600;
  }
}

a {
  .tf-ion-social-twitter,
  .tf-ion-social-twitter:hover,
  .tf-ion-social-twitter:focus,
  .tf-ion-social-twitter:active {
    color: #2e9fec;
  }

  .tf-ion-social-youtube,
  .tf-ion-social-youtube:hover,
  .tf-ion-social-youtube:focus,
  .tf-ion-social-youtube:active {
    color: #ff0000;
  }
}

ul.pagination {
  li.page-item.active {
    .page-link {
      background-color: #e85e6e;
      border-color: #e85e6e;
      background-image: linear-gradient(100deg, #f9643d, #fe2a77);
    }
  }
}

div.pdf-list {
  details.pdf-item {
    padding: 10px 0;

    summary::marker {
      color: #e85e6e;
    }
  }
}

.header {

  .github-corner:hover {
    .octo-arm {
      animation: octocat-wave 560ms ease-in-out;
    }
    @keyframes octocat-wave {
      0%,
      100% {
        transform: rotate(0);
      }
      20%,
      60% {
        transform: rotate(-25deg);
      }
      40%,
      80% {
        transform: rotate(10deg);
      }
    }
    @media (max-width: 500px) {
      .github-corner:hover .octo-arm {
        animation: none;
      }
      .github-corner .octo-arm {
        animation: octocat-wave 560ms ease-in-out;
      }
    }
  }

  @media (max-width: 768px) {
    .container {
      // calculate new max-width after adding GitHub corner
      max-width: calc(100% - 60px);
      margin-left: unset;
    }
  }

}

